# ai_plotter

./: .flake8  .gitignore  CLAUDE.md  Makefile  Plan  README.md  app.py  config.py  dependencies.py  env.example  main.py  migrate_db.py  models.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
CAD/: chessboard-Electromagnet Head.3mf  chessboard-Left Side Clip.3mf  chessboard-Left Side ClipPad003.3mf  chessboard-Left Side ClipSketch010.3mf  chessboard-chess-piece.3mf  chessboard.20260225-163121.FCBak  chessboard.20260408-010952.FCBak  chessboard.FCStd
Neo_Chess/: README.md  drizzle.config.ts  package-lock.json  package.json  replit.md  requirements.md  tailwind.config.ts  tsconfig.json  vite.config.ts
Neo_Chess/client/: index.html
Neo_Chess/server/: db.ts  index.ts  routes.ts  storage.ts
Neo_Chess/shared/: routes.ts  schema.ts
Neo_Chess/src/: App.tsx  vite-env.d.ts
blueprints/: __init__.py  admin.py  api.py  web.py
frontend/: package-lock.json  package.json
frontend/client/: requirements.md
frontend/server/: index.ts
routers/: admin.py  api.py  web.py
services/: __init__.py  chess.py  chess_game.py  database.py  electromagnet.py  gcode.py  gemini_client.py  image_processing.py  plotter.py  queue.py  style_presets.py  vectorizer.py
static/css/: chess.css  styles.css
static/js/: admin.js  app.js
storage/: app.db
templates/: admin.html  admin_login.html  chess.html  index.html
tests/: __init__.py  conftest.py  test_chess_electromagnet.py  test_chess_plotter.py  test_queue.py
(+35 files in other folders)
