[project]
name = "ai-plotter"
version = "0.1.0"
description = "FastAPI chess plotter app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning:services.vectorizer",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = [".", "tests"]
exclude = ["Neo_Chess", ".venv", "storage"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
